micro-depls/01-ci-k8s/k8s-config/manifests/10-openldap/phpldapadmin-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: phpldapadmin
  name: phpldapadmin
  namespace: openldap
spec:
  ports:
  - port: 80
  selector:
    app: phpldapadmin


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpldapadmin
  namespace: openldap
  labels:
    app: phpldapadmin
spec:
  selector:
    matchLabels:
      app: phpldapadmin
  replicas: 1
  template:
    metadata:
      labels:
        app: phpldapadmin
        namespace: openldap
    spec:
      containers:
      - name: phpldapadmin
        image: osixia/phpldapadmin:0.9.0
        ports:
        - containerPort: 80
