micro-depls/01-ci-k8s/k8s-config/manifests/10-openldap/phpldapadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "x-auth-request-user, x-auth-request-email"
  name: phpldapadmin

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - openldap-k8s.((/secrets/cloudfoundry_ops_domain))
    secretName: openldap-tls
  rules:
  - host: openldap-k8s.((/secrets/cloudfoundry_ops_domain))
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phpldapadmin
            port:
              number: 80
