micro-depls/01-ci-k8s/k8s-config/manifests/10-openldap/phpldapadmin-oauth-ingress.yaml
#additionnal Ingress, same host but specific path for oauth2 proxy
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpldapadmin-oauth
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - openldap-k8s.((/secrets/cloudfoundry_ops_domain))
    secretName: openldap-tls
  rules:
  - host: openldap-k8s.((/secrets/cloudfoundry_ops_domain))
    http:
      paths:
      - path: /oauth2
        pathType: ImplementationSpecific
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 80
